# proc-py-seed

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
examples/agent_task_runtime/: README.md  run_agent_task.py
examples/agent_task_runtime/agent_task_fns/: __init__.py  _ctx_types.py  _state.py  ask_ollama.py  build_llm_prompt.py  detect_project_checks.py  find_relevant_files.py  inspect_repo.py  propose_patch_plan.py  read_files.py  render_next_actions.py  render_pr_description.py  run_checks.py  set_task.py  summarize_checks.py  system_start.py
examples/invoice_bot/: README.md  run_demo.py
examples/invoice_bot/invoice_bot_fns/: __init__.py  calculate_totals.py  load_orders.py  render_digest.py  system_start.py
examples/repo_digest/: README.md  run_digest.py
examples/repo_digest/repo_digest_fns/: __init__.py  _ctx_types.py  collect_todos.py  render_report.py  scan_files.py  summarize_tests.py  system_start.py
proc_py/: __init__.py  cli.py  ctx.py  ctx_fns.py  loader.py  repl.py  runtime.py  scaffold.py  typegen.py
proc_py/fns/: __init__.py  hello.py  system_start.py
tests/: test_runtime.py
